fix pre content overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body * {
 }
 .l-main__content {
   flex: 1;
+  min-width: 0;
 }
 
 /* components */
